# mlucu

./: .gitignore  README.md  pyproject.toml
bikes/: bikes.ipynb
bikesV2/: bikes.ipynb  post.md
breast_cancer/: breast_cancer.ipynb  post.md
cars/: cars.ipynb
houses/: houses.ipynb  housing.csv  housing.names  post.md
mall/: mall.ipynb  post.md
penguins/: penguins.ipynb
titanic/: titanic.ipynb
wines/: wines.ipynb
