[tool.poetry]
name = "mlucu"
version = "0.1.0"
description = ""
authors = ["Nicolas Perez <n.perezgiorgi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
scikit-learn = "^0.24.2"
matplotlib = "^3.4.3"
jupyter = "^1.0.0"
requests = "^2.26.0"
category-encoders = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
